fixed vote + update